CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.1:
 7:
  StandardSection implementation, add to PointFeatureDatasetViewer
  HdfEos: look for XDim/YDim coordinates with GCTP_GEO projection, these are lat/lon
  CPpointObs: clarify the variants.
  Variable.getNameAndDimensions() had bug when theres a '%' in the name.
  UAMIV iosp calls finish() not sync()
  NetcdfDataset.enhance() now returns the CoordSysBuilder for debugging purposes
  fix NetdfDatasetInfo.getParseInfo()
  improve HDF-EOS processing.
  add earth_radius parameter to AlbersEqualArea, LambertAzimuthEqualArea, LambertConformalConic
  refactor Earth, EarthEllipsoidal. Use inverse flattening as parameter, consolidate constructors, use proj4 calculations of ellipse parameters
  add ucar.unidata.geoloc.projection.proj4 for jhlab java versions of proj4 code; AlbersEqualAreaEllipse, LambertConformalConicEllipse.
 6:
  nasty bug in Index.scalarIndexImmutable
  redo NCdumpW.writeNcML to use Formatter
  fix sync() in all iosps we control
  ucar.nc2.ft.point.standard.Evaluator() uses equals() instead of ==
  add pointstream error handling; add NcStream.Error message
  aggExisting caching now works correctly
  cdmremote point: get DateRange filter working
  optionally add time resolution in server config
  CdmRemoteFeatureDataset gets bb, dateRange from capabilities doc
  cdmRemote req=form
  ncstream anon dimensions
  cdmRemote east/west flipped
 5:
  AggFmrc: 2D time coordinate switch to double (when numeric) to avoid round-off.
  URLDumpPane, TdsReadLogs : escape query string
  NppConvention for NPOESS
 4:
  ui/iosp: Grib2 Table
  Array.createView was not propagating isUnsigned()
  ui.StructureTable also shows nominal time if possible
  PointFeatureImpl checks if nominal time == 0, if so use obsTime. workaround for protobuf lask of NaN default
  refactor station point classes
  CdmRemoteFeatureDatset is not a CdmRemote
  optimise hashmap in StructureMembers